--- a/Day4 - Array Cardio Day 1/index-START.html
+++ b/Day4 - Array Cardio Day 1/index-START.html
@@ -30,30 +30,110 @@
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
     // Array.prototype.filter()
+
     // 1. Filter the list of inventors for those who were born in the 1500's
 
+    let fifteenhundred = inventors.filter(function(inventor){
+      if(inventor.year >= 1500 && inventor.year < 1600){
+        return true;
+      } else {
+        return false;
+      }
+      console.table(fifteenhundred)
+    })
+    console.table(fifteenhundred)
+// ----------------------------------------------
     // Array.prototype.map()
+
     // 2. Give us an array of the inventors' first and last names
 
+    // OPTION 1
+    // let fullName = inventors.map(inventor => inventor.first +' '+inventor.last)
+    // console.log(fullName)
+    // OPTION 2
+      let fullName = inventors.map(function(inventor){
+      return inventor.first +' '+inventor.last
+    })
+    console.log(fullName)
+// ----------------------------------------------
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+
+
+    let order =inventors.sort(function order(a,b){
+      if(a.year > b.year){
+        return 1;
+      } else{
+        return -1;
+      }
+    });
+    console.log(order);
+
+
+
+// ----------------------------------------------
     // Array.prototype.reduce()
+    // reduce()
     // 4. How many years did all the inventors live?
 
+  //   let  years = 0;
+  //
+  //   for (var i = 0; i < inventors.length; i++) {
+  //     years += (inventors[i].passed - inventors[i].years)
+  //   }
+  // console.log(years);
+
+
+  const totalYears = inventors.reduce(function(total, inventor){
+    return total + (inventor.passed - inventor.year)
+  }, 0);
+  console.log(totalYears);
+// ----------------------------------------------
     // 5. Sort the inventors by years lived
 
+    let yearsLived = inventors.sort(function(a,b){
+      if((a.passed-a.year) > (b.passed-b.year)){
+        return -1;
+      } else {
+        return 1;
+      }
+    })
+    console.log(yearsLived);
+// ----------------------------------------------
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+// Only meant to run in browser
+    // let category = document.querySelector('.mw-category');
+    // const links =  Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //   .map(function(link){ link.textContent})
+    //   .filter(function(streetName){ streetName.includes('de')});
 
+// ----------------------------------------------
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    let lastName = people.sort(function(lastOne, nextOne){
+      let [aLast, aFirst] = lastOne.split(', ');
+      let [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ?  1 : -1;
+    })
+    console.log(lastName);
+// ----------------------------------------------
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    let transportation = data.reduce(function(obj, item){
+      if (!obj[item]){
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+    console.log(transportation)
   </script>
 </body>
 </html>
